--- a/Week 1/AssignmentForSnippetCompletion.ipynb
+++ b/Week 1/AssignmentForSnippetCompletion.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "File = open(\"HarryPotterAndTheSorcerersStone.txt\",'r')     #This helps in opening the file which is to be read"
+    "File = open(\"HarryPotterAndTheSorcerersStone.txt\",'r',encoding='utf-8')     #This helps in opening the file which is to be read"
    ]
   },
   {
